2004-05-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (AC_INIT): Bump version number to 0.7.

2004-05-05  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/*.{cc,h}: Apply a minor change of my coding style.  From
	now on, I put a space between a keyword and the following opening
	parenthesis.  That is, after for, while, if, switch and catch, with
	sizeof being the only (I think rather intuitive) exception.

	* src/globalstrings.h: New file containing (you guess it) global
	string definitions.  Currently these are mostly fully qualified
	GConf key names.

	* src/configdata.{cc,h}: Delete, as we're now using GConf.

	* src/Makefile.am (regexxer_SOURCES): Modify accordingly.

	* src/aboutdialog.cc: Prefix URL and mail strings with U+202D
	LEFT-TO-RIGHT OVERRIDE in order to avoid the current mess in
	RTL environments.
	(ContributorBox::ContributorBox): Escape the 'what' string by
	passing it to Glib::Markup::escape_text(), just in case.

	* src/controller.cc (add_widget_button): Reverse parameters
	for consistency with the other helper functions.
	(Controller::create_action_area): Make the implementation reflect
	this change.

	* src/filebuffer.{cc,h} (RegexxerTags::on_conf_value_changed):
	New signal handler listening to GConf value changes.
	(RegexxerTags::instance): Return the RefPtr<> by value rather
	than by reference, because as it turns out the extra indirection
	largely offsets the advantage gained by avoiding one additional
	ref/unref cycle.
	(FileBuffer::set_match_color): Remove; this setter is no longer
	necessary since we're now listing to GConf changes and apply them
	immediately.
	(set_current_color): ditto
	(get_match_color): ditto
	(get_current_color): ditto.
	(FileBuffer::weak_undo_stack_): Introduce a new data member used to
	record all UndoAction objects that reference MatchData instances.
	This is unfortunately necessary in order to be able to remove
	UndoActions without actually doing the undo operation, for instance