@@ -778,7 +778,12 @@ void FileBuffer::replace_match(MatchSet::const_iterator pos, const Glib::ustring
 
     // Manually remove match mark and insert the new text.
     delete_mark(match->mark);        // triggers on_mark_deleted()
-    insert(start, substituted_text); // triggers on_insert()
+
+    if (!substituted_text.empty())
+      insert(start, substituted_text); // triggers on_insert()
+    else
+      // Do a dummy insert to avoid special case of empty-by-empty replace.
+      on_insert(start, substituted_text, 0);
   }
 }
 
